Add user stats API, fix swag lint issues
