# internal/controllers/add_team.go
@@ -8,15 +8,17 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
-// @Summary Add team with members
-// @Tags Team manage
-// @Param request body entities.TeamCreate true "Team add parameters"
-// @Success 201 {object} entities.TeamRead
-// @Failure 400 {object} entities.RequestError
-// @Failure 404 {object} entities.RequestError
-// @Failure 500 {objects} entities.RequestError
-// @Router /api/v1/team/add/ [post]
-
+// AddTeam @Summary Add team with members
+//
+//	@Tags		Team manage
+//	@Param		request	body		entities.TeamCreate	true	"Team add parameters"
+//	@Success	201		{object}	entities.TeamRead
+//	@Failure	400		{object}	entities.RequestError
+//	@Failure	404		{object}	entities.RequestError
+//	@Failure	500		{objects}	entities.RequestError
+//	@Router		/api/v1/team/add/ [post]
+//
+// Add team with members.
 func (c *Controllers) AddTeam(ctx *gin.Context) {
 	var validatedData entities.TeamCreate
 	if err := c.ParseJson(ctx, &validatedData); err != nil {
