# internal/controllers/open_pr.go
@@ -8,15 +8,17 @@ import (
 	"github.com/rs/zerolog/log"
 )
 
-// @Summary Create PR and assign random reviewers
-// @Tags PR manage
-// @Param request body entities.PrCreate true "PR create parameters"
-// @Success 201 {object} entities.PrRead
-// @Failure 400 {object} entities.RequestError
-// @Failure 404 {object} entities.RequestError
-// @Failure 500 {objects} entities.RequestError
-// @Router /api/v1/pr/open/ [post]
-
+// OpenPr @Summary Create PR and assign random reviewers
+//
+//	@Tags		PR manage
+//	@Param		request	body		entities.PrCreate	true	"PR create parameters"
+//	@Success	201		{object}	entities.PrRead
+//	@Failure	400		{object}	entities.RequestError
+//	@Failure	404		{object}	entities.RequestError
+//	@Failure	500		{objects}	entities.RequestError
+//	@Router		/api/v1/pr/open/ [post]
+//
+// Open PR and assign some reviewers.
 func (c *Controllers) OpenPr(ctx *gin.Context) {
 	var validatedData entities.PrCreate
 	if err := c.ParseJson(ctx, &validatedData); err != nil {
